# interphyre

./: .gitignore  404.html  AGENTS.md  BASKET_REFACTOR_SUMMARY.md  CHANGELOG.md  ENHANCED_BAR_DESIGN.md  LICENSE  README.md  TRIGONOMETRIC_ANALYSIS.md  VERIFICATION_SYSTEM.md  bar_refactor_verifier.py  baseline_test_results.txt  config.yaml  demo.py  generate_level_gifs.py  index.html  main.py  mkdocs.yml  ppo_agent_latest.pth  pyproject.toml  pytest.ini  requirements.txt  run_funnel_bundle.py  setup.py  simulator.py  simulator_demo.py  snapshot_level.py  template_demo.py  test_snapshot_simple.py
.beads/: .beads-credential-key  .gitignore  config.yaml  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
about/: index.html
agents/: README.md  RL_SUMMARY.md  __init__.py  dqn_agent.py  evaluation.py  heuristic_agent.py  ppo_agent.py  random_agent.py  run_baseline.py
api/: index.html
api/config/: index.html
api/engine/: index.html
api/environment/: index.html
api/interventions/: index.html
api/level/: index.html
api/levels/: index.html
api/objects/: index.html
api/render/: index.html
assets/levels/: cliffhanger.webm  dive_bomb.webm  mind_the_gap.webm  (+1 more)
contributing/: index.html
demos/: 01_quickstart.py  02_gym_interface.py  03_triggers.py  04_interventions.py  05_replanning.py  06_counterfactuals.py  07_custom_levels.py  README.md  __init__.py  action_replan.py  agent_interactive.py  branching_event.py  counterfactuals.py  custom_levels.py  gym_interface.py  interventions.py  level_viewer.py  quickstart.py  replanning.py  sequence_detection.py  triggers.py  velocity_trigger.py
docs/: about.md  basket_api.md  contributing.md  getting-started.md  index.md  levels.md  tools.md  two_ball_levels.md  virtual_tools_levels.md
examples/: index.html  train_simple_agent.py
getting-started/: index.html
interphyre/: __init__.py  _level.py  config.py  engine.py  environment.py  level.py  objects.py
legacy/: null_demo.py  template_demo.py
levels/: index.html  level_0.json  level_1.json  level_2.json
models/: continuous_dqn_down_to_earth.pth  dqn_down_to_earth.pth
phyre2/: __init__.py  box2d_objects.py  engine.py  environment.py  level.py  level_builder.py  objects.py  rendering.py  utils.py
results/: baseline_results.csv  baseline_results_summary.csv  continuous_dqn_training_results.json  dqn_training_results.json
scratch/: test_scene_builder.py
scripts/: audit_catapult_32_impossible.sh  audit_catapult_impossible_seeds.sh  audit_small_impossible_seeds.sh  bundle_add_seed_10000.sh  bundle_catapult.sh  bundle_catapult_parallel.sh  bundle_catapult_v2.sh  bundle_catapult_v3.sh  bundle_catapult_v4.sh  bundle_catapult_v4_continue.sh  bundle_catapult_v5_parallel.sh  bundle_catapult_v6_chunk.sh  bundle_catapult_v6_merge.sh  bundle_cradle.sh  bundle_cradle_v2.sh  bundle_cradle_v2_chunk.sh  bundle_cradle_v2_merge.sh  bundle_cradle_v2_merge2.sh  bundle_cradle_v3.sh  bundle_cradle_v4.sh  bundle_cradle_v5.sh  bundle_cradle_v6.sh  bundle_dive_bomb_v2.sh  bundle_dive_bomb_v3.sh  bundle_dive_bomb_v4.sh  bundle_dive_bomb_v5.sh  bundle_falling_into_place_v2.sh  bundle_flagpole_v2.sh  bundle_funnel_v2.sh  bundle_just_a_nudge.sh  bundle_just_a_nudge_v2.sh  bundle_just_a_nudge_v3.sh  bundle_keyhole_v2.sh  bundle_locust.sh  bundle_locust_v2.sh  bundle_locust_v2_chunk.sh  bundle_locust_v2_merge.sh  bundle_locust_v3.sh  bundle_locust_v4.sh  bundle_locust_v5.sh  (+59 more)
search/: search_index.json
templates/: touch_ball.json
tests/: README.md  __init__.py  conftest.py  test_all_levels.py  test_api_quality.py  test_benchmark_performance.py  test_build_level_from_scene.py  test_bundle_solutions.py  test_determinism.py  test_edge_cases.py  test_engine.py  test_env_validation.py  test_environment_additional.py  test_environment_misc.py  test_environment_validation.py  test_experiments.py  test_intervention_api.py  test_intervention_primitives.py  test_object_repr.py  test_objects.py  test_performance.py  test_public_api.py  test_renderers.py  test_serialization.py  test_solution_validation.py  test_solutions.json  test_solutions.py  test_triggers.py  test_validation.py  test_visualize_action.py
tools/: SOLUTIONS_README.md  agent_demo.py  benchmark_random_agent.py  capture_freeze_frames.py  collect_all_levels.sh  collect_data.py  compare_agents.py  compare_all_agents.py  demo.py  generate_previews.py  generate_solutions.py  index.html  run_collect_all_levels.py  test_clean_agents.py  test_data_determinism.py  test_pygame_demo.py  train_agent.py  train_continuous_dqn.py  train_dqn.py  train_ppo_demo.py  video_recorder.py  viewer.py
wheels/: box2d_py-2.3.8-cp311-cp311-linux_x86_64.whl
(+799 files in other folders)
