[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interphyre"
version = "0.0.3"
description = "Physics-based puzzle environment with interventions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sankaran Vaidyanathan", email = "sankaranv@cs.umass.edu" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Box2D>=2.3.10",
    "gymnasium>=0.29.1",
    "numpy>=1.26.0,<2.0.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov", "ruff>=0.4.0", "psutil>=7.0.0"]

[project.urls]
Homepage = "https://github.com/sankaranv/interphyre"

[tool.setuptools.packages.find]
include = ["interphyre*"]

[tool.setuptools.package-data]
interphyre = ["data/levels/*.json.lzma"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tools/*" = ["E402"]
